--- a/sburbtest/index.html
+++ b/sburbtest/index.html
@@ -28,6 +28,27 @@
 		<script type="text/javascript" src="Path.js"></script>
 		<script type="text/javascript" src="ActionQueue.js"></script>
 		
+
+		<style type="text/css">
+		Body {
+			margin: 0px;
+			padding: 0px;
+		}
+
+		div {
+			margin: 0px;
+			padding: 0px;
+		}
+
+		#sburbDeploy {
+			margin: 0px;
+			padding: 0px;
+		}
+
+
+	</style>
+
+		
 	</head>
 	
 	<body onload="Sburb.initialize('JterniaDeploy','levels/openbound/openbound.xml','true');">
